--- a/Animated/index.html
+++ b/Animated/index.html
@@ -7,12 +7,15 @@
     <title>Animated LogIn</title>
 </head>
 <body>
-    
+    <div class="contaner" id="container">
+        <div class="form-container sing-up">
+            <form>
+                <h1>Create Account</h1>
+            </form>
 
+        </div>
 
-
-
-
+    </div>
 
 
 
