--- a/Animated/index.html
+++ b/Animated/index.html
@@ -11,6 +11,10 @@
         <div class="form-container sing-up">
             <form>
                 <h1>Create Account</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"></a>
+
+                </div>
             </form>
 
         </div>
