--- a/Animated/index.html
+++ b/Animated/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./input.css">
     <title>Animated LogIn</title>
-</head>
+</head><script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 <body>
     <div class="contaner" id="container">
         <div class="form-container sing-up">
