--- a/Animated/index.html
+++ b/Animated/index.html
@@ -12,7 +12,7 @@
             <form>
                 <h1>Create Account</h1>
                 <div class="social-icons">
-                    <a href="#" class="icon"><i class='bx bxl-google'></i></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='google'></box-icon></a>
 
                 </div>
             </form>
