--- a/Animated/index.html
+++ b/Animated/index.html
@@ -13,6 +13,8 @@
                 <h1>Create Account</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><box-icon type='logo' name='google'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='instagram'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='facebook'></box-icon></a>
 
                 </div>
             </form>
