--- a/Animated/index.html
+++ b/Animated/index.html
@@ -15,9 +15,13 @@
                     <a href="#" class="icon"><box-icon type='logo' name='google'></box-icon></a>
                     <a href="#" class="icon"><box-icon type='logo' name='instagram'></box-icon></a>
                     <a href="#" class="icon"><box-icon type='logo' name='facebook'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='github'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='youtube'></box-icon></a>
+
 
                 </div>
             </form>
+            
 
         </div>
 
