--- a/Animated/index.html
+++ b/Animated/index.html
@@ -20,6 +20,11 @@
 
 
                 </div>
+                <span>or use your eamil for registration </span>
+                <input type="=text" placeholder="Name">
+                <input type="=email" placeholder="Email">
+                <input type="=password" placeholder="Password">
+                 <button>Sign Up</button>
             </form>
             
 
