--- a/Animated/index.html
+++ b/Animated/index.html
@@ -29,7 +29,27 @@
             
 
         </div>
+        <div class="form-container sing-up">
+            <form>
+                <h1>Create Account</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><box-icon type='logo' name='google'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='instagram'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='facebook'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='github'></box-icon></a>
+                    <a href="#" class="icon"><box-icon type='logo' name='youtube'></box-icon></a>
 
+
+                </div>
+                <span>or use your eamil for registration </span>
+                <input type="=text" placeholder="Name">
+                <input type="=email" placeholder="Email">
+                <input type="=password" placeholder="Password">
+                 <button>Sign Up</button>
+            </form>
+            
+
+        </div>
     </div>
 
 
