--- a/Animated/index.html
+++ b/Animated/index.html
@@ -29,9 +29,9 @@
             
 
         </div>
-        <div class="form-container sing-up">
+        <div class="form-container sing-In">
             <form>
-                <h1>Create Account</h1>
+                <h1>Sing In</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><box-icon type='logo' name='google'></box-icon></a>
                     <a href="#" class="icon"><box-icon type='logo' name='instagram'></box-icon></a>
@@ -41,7 +41,7 @@
 
 
                 </div>
-                <span>or use your eamil for registration </span>
+                <span>or use your eamil password </span>
                 <input type="=text" placeholder="Name">
                 <input type="=email" placeholder="Email">
                 <input type="=password" placeholder="Password">
