--- a/Animated/index.html
+++ b/Animated/index.html
@@ -42,10 +42,10 @@
 
                 </div>
                 <span>or use your eamil password </span>
-                <input type="=text" placeholder="Name">
+               
                 <input type="=email" placeholder="Email">
                 <input type="=password" placeholder="Password">
-                 <button>Sign Up</button>
+                 <button>Sign In</button>
             </form>
             
 
