--- a/Animated/index.html
+++ b/Animated/index.html
@@ -45,6 +45,7 @@
                
                 <input type="=email" placeholder="Email">
                 <input type="=password" placeholder="Password">
+                <a href="#">Forger Your Password</a>
                  <button>Sign In</button>
             </form>
             
