--- a/Animated/index.html
+++ b/Animated/index.html
@@ -51,6 +51,15 @@
             
 
         </div>
+        <div class="toggle-container">
+            <div class="toggle">
+                <div class="toggle-panel toggle-left ">
+                    <h1>Welcome Back!</h1>
+                    <p>Enter Your Personal details to use all of site features</p>
+                      <button class="hidden" id="login">Sing In</button>
+                    </div>
+            </div>
+        </div>
     </div>
 
 
